# fsi

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: cargo.yml
cxxrag/: CMakeLists.txt  Cargo.toml
cxxrag-index/: CMakeLists.txt
cxxrag-index/include/: Include.h  IndexAction.h
cxxrag-index/lib/: IndexAction.cxx  main.cxx
src/: main.rs
