[package]
name = "cxxrag"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
khroma = "0"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ollama-rs = "0.3"
tree-sitter = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.24"
